plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ssafy14'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 사용을 위해 필수

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	runtimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'

	// env
	implementation(platform("me.paulschwarz:spring-dotenv-bom:5.1.0"))
	developmentOnly 'me.paulschwarz:spring-dotenv:4.0.0'

	// bean validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// jjwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('bootRun') {
	def envFile = file("$projectDir/.env")   // SpringBoot/.env 를 의미
	if (envFile.exists()) {
		def props = new Properties()
		envFile.withInputStream { props.load(it) }

		// bootRun 프로세스 환경변수에 주입
		environment props.collectEntries { k, v -> [(k.toString()): v.toString()] }
	}
}
